# mqt-debugger

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  sitecustomize.py  test.txt
.github/: codecov.yml  contributing.rst  release-drafter.yml  support.rst
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  update-mqt-core.yml
app/: CMakeLists.txt  testDDSimDebugger.cpp
app/code/: classic_control_test.qasm  classical_registers_test.qasm  entanglement_test.qasm  reset_test.qasm  statevector_equality_test.qasm  test.qasm
bindings/: CMakeLists.txt  InterfaceBindings.cpp  bindings.cpp
cmake/: AddMQTDebuggerBinding.cmake  ExternalDependencies.cmake  cmake_uninstall.cmake.in
docs/: AssertionRefinement.rst  DevelopmentGuide.rst  Diagnosis.rst  Doxyfile  Installation.rst  Publications.rst  Quickstart.rst  RuntimeVerification.rst  conf.py  index.rst  refs.bib
docs/source/: Assertions.rst  Debugging.rst  DevelopmentGuide.rst  Diagnosis.rst  Installation.rst  Publications.rst  Quickstart.rst  conf.py  index.rst
include/: common.h  ddsimDebug.hpp  debug.h  mockDebug.h
include/backend/: debug.h  diagnostics.h
include/backend/dd/: DDSimDebug.hpp  DDSimDiagnostics.hpp
include/backend/parsing/: AssertionParsing.hpp
include/common/: ComplexMathematics.hpp  Span.hpp
include/common/parsing/: AssertionParsing.hpp  AssertionTools.hpp  CodePreprocessing.hpp  ParsingError.hpp  Utils.hpp
include/frontend/cli/: CliFrontEnd.hpp
include/python/: InterfaceBindings.hpp
include/python/dd/: DDSimDebugBindings.hpp
python/mqt/debugger/: pydebugger.pyi
python/mqt/debugger/check/: __init__.py  result_checker.py  runtime_check.py
python/mqt/debugger/dap/: __init__.py  adapter.py  dap_server.py
python/mqt/debugger/dap/messages/: configuration_done_dap_message.py  dap_message.py  exception_info_message.py  exited_dap_event.py  gray_out_event.py  initialized_dap_event.py  next_dap_message.py  output_dap_event.py  restart_dap_message.py  scopes_dap_message.py  set_breakpoints_dap_message.py  (+8 more)
src/: CMakeLists.txt  ddsimDebug.cpp  mockDebug.c
src/backend/dd/: DDSimDebug.cpp  DDSimDiagnostics.cpp
src/backend/parsing/: AssertionParsing.cpp
src/common/: ComplexMathematics.cpp
src/common/parsing/: AssertionParsing.cpp  AssertionTools.cpp  CodePreprocessing.cpp  ParsingError.cpp  Utils.cpp
src/frontend/cli/: CliFrontEnd.cpp
src/mqt/debug/: __init__.py  adapter.py  dap_server.py  pydebug.pyi
src/mqt/debug/dap/: __init__.py  dap_server.py
src/mqt/debug/dap/messages/: configuration_done_dap_message.py  disconnect_dap_message.py  gray_out_event.py  initialize_dap_message.py  scopes_dap_message.py  set_breakpoints_dap_message.py  terminate_dap_message.py  utils.py
src/mqt/debug/messages/: __init__.py  capabilities_dap_event.py  dap_event.py  dap_message.py  disconnect_dap_message.py  exception_info_message.py  initialize_dap_message.py  initialized_dap_event.py  launch_dap_message.py  output_dap_event.py  pause_dap_message.py  restart_frame_dap_message.py  reverse_continue_dap_message.py  scopes_dap_message.py  set_breakpoints_dap_message.py  set_exception_breakpoints_dap_message.py  stack_trace_dap_message.py  step_in_dap_message.py  stopped_dap_event.py  terminate_dap_message.py  utils.py  variables_dap_message.py
src/mqt/debugger/: __init__.py  _version.pyi  pydebugger.pyi
src/mqt/debugger/check/: __init__.py  __main__.py  calibration.py  result_checker.py  run_preparation.py  runtime_check.py
src/mqt/debugger/dap/: dap_server.py
src/mqt/debugger/dap/messages/: __init__.py  capabilities_dap_event.py  continue_dap_message.py  dap_event.py  disconnect_dap_message.py  exited_dap_event.py  initialize_dap_message.py  launch_dap_message.py  next_dap_message.py  pause_dap_message.py  restart_dap_message.py  restart_frame_dap_message.py  reverse_continue_dap_message.py  set_exception_breakpoints_dap_message.py  step_back_dap_message.py  step_out_dap_message.py  terminate_dap_message.py  terminated_dap_event.py  threads_dap_message.py  utils.py  variables_dap_message.py
src/python/: CMakeLists.txt  InterfaceBindings.cpp  bindings.cpp
src/python/dd/: DDSimDebugBindings.cpp
test/: CMakeLists.txt  Makefile  common_fixtures.cpp  testDDSimDebugger.cpp  testMockDebugger  testMockDebugger.c  test_assertion_creation.cpp  test_assertion_movement.cpp  test_compilation.cpp  test_compilation_projective_measurements.cpp  test_compilation_statistical_slices.cpp  test_custom_code.cpp  test_data_retrieval.cpp  test_diagnostics.cpp  test_parsing.cpp  test_simulation.cpp  test_utility.cpp  utils_test.cpp
test/circuits/: classical-storage.qasm  complex-jumps.qasm  diagnose-with-jumps.qasm  failing-assertions-missing-interaction.qasm  failing-assertions-multiple-causes.qasm  failing-assertions-multiple-missing-interaction.qasm  failing-assertions-multiple-zero-controls.qasm  failing-assertions.qasm  runtime-interaction.qasm  zero-controls-with-jumps.qasm
test/code/: circuit_equality_test.qasm  entanglement_test.qasm  statevector_equality_test.qasm  superposition_test.qasm  test.qasm
test/python/: test.py  test_compilation.py  test_dap.py  test_diagnosis.py  test_end_to_end.py  test_python_bindings.py
test/python/resources/bindings/: classical.qasm  ghz-incorrect.qasm  jumps.qasm
test/python/resources/compilation/: bell-pair-equal-90-100.json  bell-pair-equal-90-250.json  bell-pair-unequal-90-100.json  bell-pair-unequal-90-250.json  calibration.json  original.qasm  test-shots.qasm
test/python/resources/diagnosis/: control-always-zero.qasm  data-dependencies-with-callers.qasm  dependencies-with-jumps.qasm  dependencies.qasm  missing-interaction.qasm
test/python/resources/end-to-end/: bell.out  bell.qasm  bv.out  bv.qasm  dj_4.out  dj_4.qasm  fail_eq.out  fail_eq.qasm  fail_ghz.out  fail_ghz.qasm  ghz_3.out  ghz_3.qasm  ghz_5.out  ghz_5.qasm  grover_3.out  grover_3.qasm  qpe.out  qpe.qasm
test/utils/: common_fixtures.hpp  utils_test.hpp
(+3 files in other folders)
